RESOLVED FIXED229526
REGRESSION(r281513?): [ JSC Catalina+ Debug ] 16 stress/intl-enumeration.js (JSC Tests) are flaky failing
https://bugs.webkit.org/show_bug.cgi?id=229526
Summary REGRESSION(r281513?): [ JSC Catalina+ Debug ] 16 stress/intl-enumeration.js (...
Robert Jenner
Reported 2021-08-25 15:47:46 PDT
It looks like the tests were added here: https://trac.webkit.org/changeset/281513/webkit and have been flaky failing with the following assertion ever since: ASSERTION FAILED: !m_needExceptionCheck stress/intl-enumeration.js.bytecode-cache: ./runtime/VM.cpp(1485) : void JSC::VM::verifyExceptionCheckNeedIsSatisfied(unsigned int, JSC::ExceptionEventLocation &) Build: https://build.webkit.org/#/builders/100/builds/742 In their history it does appear that they all fail at the same intervals as well: https://results.webkit.org/?suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&suite=javascriptcore-tests&test=stress%2Fintl-enumeration.js.dfg-eager&test=stress%2Fintl-enumeration.js.dfg-eager-no-cjit-validate&test=stress%2Fintl-enumeration.js.eager-jettison-no-cjit&test=stress%2Fintl-enumeration.js.ftl-eager&test=stress%2Fintl-enumeration.js.ftl-eager-no-cjit&test=stress%2Fintl-enumeration.js.ftl-eager-no-cjit-b3o1&test=stress%2Fintl-enumeration.js.ftl-no-cjit-b3o0&test=stress%2Fintl-enumeration.js.ftl-no-cjit-no-inline-validate&test=stress%2Fintl-enumeration.js.ftl-no-cjit-no-put-stack-validate&test=stress%2Fintl-enumeration.js.ftl-no-cjit-small-pool&test=stress%2Fintl-enumeration.js.ftl-no-cjit-validate-sampling-profiler&test=stress%2Fintl-enumeration.js.mini-mode&test=stress%2Fintl-enumeration.js.no-cjit-validate-phases&test=stress%2Fintl-enumeration.js.no-ftl&test=stress%2Fintl-enumeration.js.no-llint&test=stress%2Fmap-iteration-oas.js.default&style=debug
Attachments
Patch (3.18 KB, patch)
2021-08-25 16:48 PDT, Yusuke Suzuki
no flags
Radar WebKit Bug Importer
Comment 1 2021-08-25 15:48:11 PDT
Yusuke Suzuki
Comment 2 2021-08-25 16:48:01 PDT
Mark Lam
Comment 3 2021-08-25 16:51:17 PDT
Comment on attachment 436440 [details] Patch r=me
Yusuke Suzuki
Comment 4 2021-08-25 17:16:02 PDT
Comment on attachment 436440 [details] Patch Landing since it only affects on debug jsc stress tests, which does not exist in EWS
EWS
Comment 5 2021-08-25 17:43:23 PDT
Committed r281607 (240965@main): <https://commits.webkit.org/240965@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 436440 [details].
Note You need to log in before you can comment on or make changes to this bug.