REGRESSION(r281513?): [ JSC Catalina+ Debug ] 16 stress/intl-enumeration.js (JSC Tests) are flaky failing https://bugs.webkit.org/show_bug.cgi?id=229526

Reviewed by Mark Lam.

Fix debug JSC test failures by using RELEASE_AND_RETURN.

* runtime/IntlObject.cpp:
(JSC::availableCalendars):
(JSC::availableCollations):
(JSC::availableCurrencies):
(JSC::availableNumberingSystems):
(JSC::availableTimeZones):


Canonical link: https://commits.webkit.org/240965@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@281607 268f45cc-cd09-0410-ab3c-d52691b4dbfc